# local-ai-guild

./: .gitignore  AGENTS.md  DECISIONS.md  NEXT_WORK_PACKET.md  OPEN_QUESTIONS.md  PROJECT_STATE.md  README.md  ROADMAP.md  SECURITY.md  VERIFICATION.md  VISION.md  pyproject.toml
config/: models.example.yaml  providers.example.yaml  routing.example.yaml  tools.example.yaml
docs/architecture/: COMPONENT_MODEL.md  EXECUTION_FLOW.md  SECURITY_BOUNDARIES.md  SYSTEM_CONTEXT.md
scripts/: bootstrap.ps1  show-environment.ps1  verify-repository.ps1
src/local_ai_guild/: __init__.py  __main__.py  cli.py  contracts.py  mock_router.py  validation.py
tests/: test_cli.py  test_contracts.py  test_mock_router.py
